@@ -25,6 +25,9 @@ hg tip
 * Fix the way bundle components are unpacked and moved around, to make
   bundles work.
 
+* Adds ``-s`` option to allow the access to the global site-packages if a
+  virtualenv is to be created.
+
 0.3.1
 -----
 
